[project]
name = "async-apis"
version = "0.0.1"
authors = [
  { name="Edmar", email="edmaroferreira@gmail.com" },
]
description = "A collection of async wrappers for APIs"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/edmar/async-apis"
"Bug Reports" = "https://github.com/edmar/async-apis/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"